--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.cplenzdorf.playyourlife.MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:title="Settings" />
+    <item
+        android:id="@+id/action_profile"
+        android:title="Profil" />
+    <item
+        android:id="@+id/action_quests"
+        android:title="Quests" />
+    <item
+        android:id="@+id/action_add_task"
+        android:title="Aufgabe hinzufügen" />
+    <item
+        android:id="@+id/action_login_logout"
+        android:title="Login/Logout" />
 </menu>
